todo_app/manifests/deployment.yaml
# todo-frontend-deployment uses volumes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend-deployment
  labels:
    app: todo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      dnsPolicy: Default
      volumes:
        - name: todo-volumes
          persistentVolumeClaim:
            claimName: todo-pvclaim

      containers:
        - name: image-worker
          image: BACKEND/IMAGE
          command: ["npm"]
          args: ["run", "image-worker"]
          volumeMounts:
            - name: todo-volumes
              mountPath: "/usr/src/app/files"

        - name: image-backend
          image: BACKEND/IMAGE
          command: ["npm"]
          args: ["run", "image-backend"]
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: todo-volumes
              mountPath: "/usr/src/app/files"

        - name: todo-frontend
          image: FRONTEND/IMAGE

          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-deployment
  labels:
    app: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend

    spec:
      containers:
        - image: BACKEND/IMAGE
          name: todo-backend
          command: ["npm"]
          args: ["run", "todo-backend"]
          
          ports:
            - containerPort: 3000
