todo_app/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-database-statefulset
  namespace: project
spec:
  selector:
    matchLabels:
      app: todo-database
  serviceName: todo-database
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-database
    spec:
      containers:
        - name: todo-database-container
          image: POSTGRES/IMAGE
          ports:
            - containerPort: 5432

          volumeMounts:
            - name: todo-init
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
              readOnly: true

            - name: todo-database-data
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: todo-init
          configMap:
            name: todo-database-configmap

  volumeClaimTemplates:
    - metadata:
        name: todo-database-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
