todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc

spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: todo-database-svc

spec:
  selector:
    app: todo-database
  clusterIP: None
